crates/bitnet-opencl/tests/snapshots/snapshot_tests__error_matmul_unavailable.snap
---
source: crates/bitnet-opencl/tests/snapshot_tests.rs
expression: "format!(\"{err}\")"
---
Kernel error: Kernel execution failed: OpenCL operation 'matmul_i2s' is not yet wired to an OpenCL runtime
