crates/bitnet-opencl/tests/snapshots/snapshot_tests__error_qk256_zero_k.snap
---
source: crates/bitnet-opencl/tests/snapshot_tests.rs
expression: "format!(\"{err}\")"
---
Kernel error: Invalid arguments: QK256 inner dimension k=0 must be a positive multiple of 256
