crates/bitnet-opencl/tests/snapshots/snapshot_tests__error_zero_workgroup.snap
---
source: crates/bitnet-opencl/tests/snapshot_tests.rs
expression: "format!(\"{err}\")"
---
Kernel error: Invalid arguments: workgroup problem_size must be non-zero
