crates/bitnet-opencl/tests/snapshots/snapshot_tests__kernel_names.snap
---
source: crates/bitnet-opencl/tests/snapshot_tests.rs
expression: names
---
- qk256_gemv
- rmsnorm
- attention
