crates/bitnet-opencl/tests/snapshots/snapshot_tests__qk256_buffer_sizes.snap
---
source: crates/bitnet-opencl/tests/snapshot_tests.rs
expression: cases
---
- - 1
  - 256
  - 64
  - 2
- - 1
  - 512
  - 128
  - 4
- - 2048
  - 2048
  - 1048576
  - 32768
- - 4096
  - 4096
  - 4194304
  - 131072
